--- a/Config/1_novathesis.tex
+++ b/Config/1_novathesis.tex
@@ -14,7 +14,7 @@
 %% THE MOST IMPORTANT/POPULAR OPTIONS
 %%------------------------------------------------------------
 
-% \ntsetup{doctype=msc}       % The type of document
+\ntsetup{doctype=mscplan}       % The type of document
 %                               %     [     phd —> PhD thesis
 %                               %       phdplan —> PhD thesis plan
 %                               %       phdprop —> PhD thesis proposal
@@ -25,7 +25,7 @@
 %                               %     ]
 %                               % DEFAULT: doctype=phd
 
-% \ntsetup{school=uminho/eeng}    % The school id
+\ntsetup{school=nova/fct}    % The school id
 %                               %     [ nova/fct, nova/fct/di-adc, nova/fct/cbbi,
 %                               %       nova/fct/blue, nova/fct/green, nova/fct/brown, nova/fct/red,
 %                               %       nova/itqb/gray, nova/itqb/green, nova/fcsh, nova/ensp, 
@@ -40,7 +40,7 @@
 %                               %     ]
 %                               % DEFAULT: school=nova/fct
 
-% \ntsetup{docstatus=final}     % The status of the document
+\ntsetup{docstatus=working}     % The status of the document
 %                               %     [     working —> working version of the document
 %                                                      skips some “frontmatter” stuff,
 %                                       provisional —> submission version (no committee),
@@ -50,7 +50,7 @@
 %                               %     ]
 %                               % DEFAULT: docstatus=working
 
-% \ntsetup{lang=pt}             % The main language for the document text
+\ntsetup{lang=en}             % The main language for the document text
 %                               % following ISO 3166-1 (alfa-2)
 %                               %     [ en, pt, fr, it, de, es —> valid languages
 %                               %     ]
