--- a/Config/3_cover.tex
+++ b/Config/3_cover.tex
@@ -86,7 +86,7 @@
 % SYNTAX: \ntauthorname(gender){full name}{abbreviated name}
 %         Use [f] for female and [m] for male
 %-------------------------------------------------------------------
-\ntauthorname(m){John Very Longname Doe}{John Doe}
+\ntauthorname(m){Gonçalo Pereira Duarte}{Gonçalo Duarte}
 
 %-------------------------------------------------------------------
 % AUTHOR previous degree
