--- a/Config/3_cover.tex
+++ b/Config/3_cover.tex
@@ -19,7 +19,7 @@
 %                                 (if omitted defaults to main title without line breaks)
 %-------------------------------------------------------------------
 %         You may use "\\" to force line breaks
-\nttitle(main,en){A Very Long and Impressive\\Thesis Title with a Forced Line Break}%
+\nttitle(main,en){Combining Static \\and Dynamic Verification for \\the Analysis of OCaml Programs}%
 \nttitle(main,pt){Um Título de Tese Longo\\e com uma Mudança de Linha Forçada}%
 
 %         You may use "\\" to force line breaks
