Some more updates to cover, resumo and abstract

--- a/Config/3_cover.tex
+++ b/Config/3_cover.tex
@@ -92,8 +92,8 @@
 % AUTHOR previous degree
 % SYNTAX: \ntauthordegree{degree}
 %-------------------------------------------------------------------
-\ntauthordegree(en){Master/BSc in Name of Previous Degree}
-\ntauthordegree(pt){Mestrado/Licenciatura em Nome do Grau Anterior}
+\ntauthordegree(en){Master in Computer Science and Engineering}
+\ntauthordegree(pt){Mestrado em Engenharia Informática}
 
 %-------------------------------------------------------------------
 % SUBMISSION/EXAM DATE
