--- a/Config/6_list_of.tex
+++ b/Config/6_list_of.tex
@@ -28,4 +28,4 @@
     {\ntaddlistof{lstlistoflistings}}{}
 \@ifpackageloaded{minted}        % The List of Listings for the “minted” package.
     {\ntaddlistof{listoflistings}}{}
-% \ntaddlistof{listsofglossaries}  % The Glossary, and the lists of Acronyms and Symbols
+\ntaddlistof{listsofglossaries}  % The Glossary, and the lists of Acronyms and Symbols
