--- a/Config/4_files.tex
+++ b/Config/4_files.tex
@@ -72,6 +72,7 @@
 \ntaddfile{chapter}{chapter2}
 \ntaddfile{chapter}{chapter3}
 \ntaddfile{chapter}{chapter4}
+\ntaddfile{chapter}{chapter5}
 % \ntaddfile{chapter}{chapter-last}
 
 %%------------------------------------------------------------
