--- a/Bibliography/bibliography_doi.bib
+++ b/Bibliography/bibliography_doi.bib
@@ -1,4 +1,4 @@
-@inproceedings{static_and_dynamic_verification_of_ocaml_programs,
+@inproceedings{Pereira2024,
   author       = {Tiago Lopes Soares and
                   Ion Chirica and
                   M{\'{a}}rio Pereira},
@@ -18,14 +18,7 @@
   biburl       = {https://dblp.org/rec/conf/isola/SoaresCP24.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
-@misc{ortac_runtime_assertion_checking,
-   abstract = {Runtime assertion checking (RAC) is a convenient set of techniques that lets developers abstract away the process of verifying the correctness of their programs by writing formal specifications and automating their verification at runtime. In this work, we present ortac, a runtime assertion checking tool for OCaml libraries and programs. OCaml is a functional programming language in which idioms rely on an expressive type system, modules, and interface abstractions. ortac consumes interfaces annotated with type invariants and function contracts and produces code wrappers with the same signature that check these specifications at runtime. It provides a flexible framework for traditional assertion checking, monitoring mis-behaviors without interruptions, and automated fuzz testing for OCaml programs. This paper presents an overview of ortac features and highlights its main design choices.},
-   author = {Jean-Christophe Filliâtre and Clément Pascutto},
-   keywords = {Assertion,Caml·,Checking· O,Engineer-ing,Runtime,Software},
-   title = {Ortac: Runtime Assertion Checking for OCaml (tool paper)},
-   url = {https://github.com/ocaml-gospel/ortac.},
-}
-@inproceedings{pyramid_of_formal_verification,
+@inproceedings{Brain2025,
    abstract = {Over the past few years there has been significant progress in the various fields of software verification resulting in many useful tools and successful deployments, both academic and commercial. However much of the work describing these tools and ideas is written by and for the research community. The scale, diversity and focus of the literature can act as a barrier, separating industrial users and the wider academic community from the tools that could make their work more efficient, more certain and more productive. This tutorial gives a simple classification of verification techniques in terms of a pyramid and uses it to describe the six main schools of verification technologies. We have found this approach valuable for building collaborations with industry as it allows us to explain the intrinsic strengths and weaknesses of techniques and pick the right tool for any given industrial application. The model also highlights some of the cultural differences and unspoken assumptions of different areas of verification and illuminates future directions.},
    author = {Martin Brain and Elizabeth Polgreen},
    doi = {10.1007/978-3-031-71177-0_24},
@@ -37,4 +30,19 @@
    title = {A Pyramid Of (Formal) Software Verification},
    volume = {14934 LNCS},
    year = {2025},
+}
+@InProceedings{Filliâtre2021,
+author="Filli{\^a}tre, Jean-Christophe
+and Pascutto, Cl{\'e}ment",
+editor="Feng, Lu
+and Fisman, Dana",
+title="Ortac: Runtime Assertion Checking for OCaml (Tool Paper)",
+booktitle="Runtime Verification",
+year="2021",
+publisher="Springer International Publishing",
+address="Cham",
+pages="244--253",
+abstract="Runtime assertion checking (RAC) is a convenient set of techniques that lets developers abstract away the process of verifying the correctness of their programs by writing formal specifications and automating their verification at runtime.",
+isbn="978-3-030-88494-9",
+doi = {10.1007/978-3-030-88494-9_13}
 }
