New glossary entries; further development of chapter 2

--- a/Config/5_packages.tex
+++ b/Config/5_packages.tex
@@ -30,6 +30,14 @@
 \newcommand{\pdfLaTeX}{pdf\LaTeX}
 \definecolor{Schlgray}{gray}{0.95}
 
+\newcommand{\ocaml}{OCaml}
+\newcommand{\gospel}{\gls{gospel}}
+\newcommand{\ortac}{\gls{ortac}}
+\newcommand{\cameleer}{\gls{cameleer}}
+\newcommand{\why}{\gls{why3}}
+\newcommand{\rac}{\gls{rac}}
+\newcommand{\dv}{\gls{dv}}
+
 
 %%============================================================
 %%  ADD YOUR PACKAGES AND OTHER CUSTOMIZATIONS HERE
