Problems with glossary style (help)

--- a/Config/1_novathesis.tex
+++ b/Config/1_novathesis.tex
@@ -137,7 +137,7 @@
 % \ntsetup{style/url=same}       % Use the same (main) font in URLs
 %                               % DEFAULT: whatever hyperref uses as default
 
-% \ntsetup{style/font=futura}    % You can use any of the default LaTeX style files:
+\ntsetup{style/font=newpx}    % You can use any of the default LaTeX style files:
 %                               % Or any of the additional styles
 %                               %     [ bookman, erewho, kpfonts, libertine,
 %                               %       schola, stix2, newpx, newtx
