--- a/Config/5_packages.tex
+++ b/Config/5_packages.tex
@@ -4,7 +4,7 @@
 %% NOVA thesis configuration file
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\typeout{NT FILE Config/5_packages.tex}%
+\typeout{NT FILE Config/5_packages.tex}
 
 % \ntlangsetup{pt/contentsname=O MEU ÍNDICE}
 % \ntlangsetup{en/contentsname=MY LITTLE TOC}
@@ -12,39 +12,28 @@
 %%============================================================
 %%  FOR DEMO PURPOSES ONLY --- YOU SHOULD REMOVE THESE PACKAGES
 %%============================================================
-\usepackage{float}        % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
-\usepackage{wrapfig}      % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
-\restylefloat{figure}     % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
-\usepackage{metalogo}     % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
+
 \usepackage{lipsum}       % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
-\IfFileExists{byo-twemojiss.sty}{
-  \usepackage{byo-twemojis}     % to typeset emojis
-  \newcommand{\emojiSmile}{\raisebox{-3pt}{\scalebox{1.3}{\byoTwemoji{head; eyes normal opened; mouth laughing}}}}
-}{
-  \newcommand{\emojiSmile}{\texttt{:D}}
-  \newlength{\twemojiDefaultHeight}
-}
 
 \newcommand{\MikTeX}{Mik\TeX}
 \newcommand{\TeXLive}{\TeX Live}
 \newcommand{\pdfLaTeX}{pdf\LaTeX}
 \definecolor{Schlgray}{gray}{0.95}
 
-\newcommand{\ocaml}{OCaml}
-\newcommand{\gospel}{\gls{gospel}}
-\newcommand{\ortac}{\gls{ortac}}
-\newcommand{\cameleer}{\gls{cameleer}}
-\newcommand{\why}{\gls{why3}}
-\newcommand{\rac}{\gls{rac}}
-\newcommand{\dv}{\gls{dv}}
+\usepackage{cleveref}
+\usepackage{hyperref}
+\usepackage{xspace}
 
-
-%%============================================================
-%%  ADD YOUR PACKAGES AND OTHER CUSTOMIZATIONS HERE
-%%============================================================
-
-% \usepackage[orphans/prevent, widows/prevent]{widows-and-orphans} % add warnings about widows and orphans to “template.log”
-% \usepackage{refcheck}     % list used and unused labels
+\newcommand{\ocaml}{OCaml\xspace}
+\newcommand{\gospel}{\gls{gospel}\xspace}
+\newcommand{\ortac}{\gls{ortac}\xspace}
+\newcommand{\cameleer}{\gls{cameleer}\xspace}
+\newcommand{\why}{\gls{why3}\xspace}
+\newcommand{\rac}{\gls{rac}\xspace}
+\newcommand{\dv}{\gls{dv}\xspace}
+\newcommand{\zthree}{\gls{z3}\xspace}
+\newcommand{\altergo}{\gls{altergo}\xspace}
+\newcommand{\coq}{\gls{coq}\xspace}
 
 \usepackage{paralist}     % To enable costumizable enumerates.  See the documentation.
 
@@ -54,41 +43,6 @@
 
 \usepackage{tcolorbox}    % pretty print color boxes
 
-% \usepackage{indentfirst}       % Indent first list after a (sub)section title
-
-% \usepackage{algorithm2e}
-% \RestyleAlgo{ruled}
-
 \usepackage{minted}    % Fontification of source code listings
-
-% \usepackage{listings}    % Fontification of source code listingsConfig/5_packages.tex
-                         % In alternative, use the package “minted” (highly recomended)
-
+\usemintedstyle{colorful} % Set the default syntax highlighting style
 \usepackage{xcolor}
-
-% \lstset{
-%     keywordstyle=\color{blue},
-%     commentstyle=\color{green!50!black},
-%     captionpos=b,
-%     basicstyle={\ttfamily},
-%     tabsize=2,
-%     language=[Objective]Caml,
-%     float,
-%     columns=fullflexible,
-%     breaklines=true,
-%     postbreak=\mbox{\textcolor{red}{$\hookrightarrow$}\space},
-%     inputencoding=utf8,
-%     extendedchars=true,
-%     literate=
-%       {á}{{\'a}}1 {é}{{\'e}}1 {í}{{\'i}}1 {ó}{{\'o}}1 {ú}{{\'u}}1
-%       {Á}{{\'A}}1 {É}{{\'E}}1 {Í}{{\'I}}1 {Ó}{{\'O}}1 {Ú}{{\'U}}1
-%       {à}{{\`a}}1 {è}{{\`e}}1 {ì}{{\`i}}1 {ò}{{\`o}}1 {ù}{{\`u}}1
-%       {À}{{\`A}}1 {È}{{\'E}}1 {Ì}{{\`I}}1 {Ò}{{\`O}}1 {Ù}{{\`U}}1
-%       {ä}{{\"a}}1 {ë}{{\"e}}1 {ï}{{\"i}}1 {ö}{{\"o}}1 {ü}{{\"u}}1
-%       {Ä}{{\"A}}1 {Ë}{{\"E}}1 {Ï}{{\"I}}1 {Ö}{{\"O}}1 {Ü}{{\"U}}1
-%       {â}{{\^a}}1 {ê}{{\^e}}1 {î}{{\^i}}1 {ô}{{\^o}}1 {û}{{\^u}}1
-%       {Â}{{\^A}}1 {Ê}{{\^E}}1 {Î}{{\^I}}1 {Ô}{{\^O}}1 {Û}{{\^U}}1
-%       {œ}{{\oe}}1 {Œ}{{\OE}}1 {æ}{{\ae}}1 {Æ}{{\AE}}1 {ß}{{\ss}}1
-%       {ç}{{\c c}}1 {Ç}{{\c C}}1 {ø}{{\o}}1 {å}{{\r a}}1 {Å}{{\r A}}1
-%       {€}{{\EUR}}1 {£}{{\pounds}}1
-% }
