Problems with Glossary

--- a/Config/5_packages.tex
+++ b/Config/5_packages.tex
@@ -44,5 +44,5 @@
 \usepackage{tcolorbox}    % pretty print color boxes
 
 \usepackage{minted}    % Fontification of source code listings
-\usemintedstyle{colorful} % Set the default syntax highlighting style
+%   \usemintedstyle{colorful}       
 \usepackage{xcolor}
