New references added

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -1,24 +1,59 @@
-@inproceedings{Pereira2024,
-  author       = {Tiago Lopes Soares and
-                  Ion Chirica and
-                  M{\'{a}}rio Pereira},
-  editor       = {Tiziana Margaria and
-                  Bernhard Steffen},
-  title        = {Static and Dynamic Verification of OCaml Programs: The Gospel Ecosystem},
-  booktitle    = {Leveraging Applications of Formal Methods, Verification and Validation.
-                  Specification and Verification - 12th International Symposium, ISoLA
-                  2024, Crete, Greece, October 27-31, 2024, Proceedings, Part {III}},
-  series       = {Lecture Notes in Computer Science},
-  volume       = {15221},
-  pages        = {247--265},
-  publisher    = {Springer},
-  year         = {2024},
-  doi          = {10.1007/978-3-031-75380-0\_14},
-  timestamp    = {Fri, 08 Nov 2024 20:51:09 +0100},
-  biburl       = {https://dblp.org/rec/conf/isola/SoaresCP24.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+@article{Rajabli_Nijat2021,
+   abstract = {Autonomous, or self-driving, cars are emerging as the solution to several problems primarily caused by humans on roads, such as accidents and traffic congestion. However, those benefits come with great challenges in the verification and validation (V&V) for safety assessment. In fact, due to the possibly unpredictable nature of Artificial Intelligence (AI), its use in autonomous cars creates concerns that need to be addressed using appropriate V&V processes that can address trustworthy AI and safe autonomy. In this study, the relevant research literature in recent years has been systematically reviewed and classified in order to investigate the state-of-the-art in the software V&V of autonomous cars. By appropriate criteria, a subset of primary studies has been selected for more in-depth analysis. The first part of the review addresses certification issues against reference standards, challenges in assessing machine learning, as well as general V&V methodologies. The second part investigates more specific approaches, including simulation environments and mutation testing, corner cases and adversarial examples, fault injection, software safety cages, techniques for cyber-physical systems, and formal methods. Relevant approaches and related tools have been discussed and compared in order to highlight open issues and opportunities.},
+   author = {Nijat Rajabli and Francesco Flammini and Roberto Nardone and Valeria Vittorini},
+   doi = {10.1109/ACCESS.2020.3048047},
+   issn = {21693536},
+   journal = {IEEE Access},
+   keywords = {Advanced driver assistance systems,automotive engineering,autonomous vehicles,cyber-physical systems,formal verification,intelligent vehicles,machine learning,system testing,system validation,vehicle safety},
+   pages = {4797-4819},
+   publisher = {Institute of Electrical and Electronics Engineers Inc.},
+   title = {Software Verification and Validation of Safe Autonomous Cars: A Systematic Literature Review},
+   volume = {9},
+   year = {2021},
 }
-@inproceedings{Brain2025,
+@article{Bezerra_Jonas_Santos2016,
+   abstract = {Health assessment tools (treatment standardization guidelines, risk evaluation scales, disease burden estimations, and patient's perceptions questionnaires, among others) are very similar in format to a software specification, although targeted to humans. As in any document written in natural language, such medical approaches are prone to errors and misunderstandings caused by ambiguities, omissions, or inconsistencies thus reducing the applicability and efficacy of these tools. The verification of health assessment tools is an important step for standardization but it is still a manual and ad-hoc process in the medical community. This work proposes the use of a formal approach for the verification of health assessment tools. We apply and evaluate a methodology originally proposed for the verification of Use Cases to a specific medical standardization guideline. Preliminary results show that formal verification of these medical artifacts can be a cost-effective mechanism to validate and qualify health approaches.},
+   author = {Jonas Santos Bezerra and Andrei Costa and Leila Ribeiro and Érika Cota},
+   doi = {10.1016/j.entcs.2016.09.005},
+   issn = {15710661},
+   journal = {Electronic Notes in Theoretical Computer Science},
+   keywords = {Formal Verification,Graph Transformations,Medical Guidelines,Textual Documents,Use Cases},
+   month = {9},
+   pages = {31-50},
+   publisher = {Elsevier B.V.},
+   title = {Formal Verification of Health Assessment Tools: a Case Study},
+   volume = {324},
+   year = {2016},
+}
+@article{Yin_Yongfeng2010,
+   abstract = {As an important part of airborne avionics system, aircraft safety critical software (ASCS) plays an essential role to the safety of the aircraft, and to ensure its quality and reliability is one of the key problems we are facing. Formal methods have become important means for modeling and verifying safety critical software. In this paper, formal method is introduced into the ASCS verification field and the real-time extended finite state machine model (RT-EFSM) is studied, which includes the detailed real-time extension schemes and its validation methods. The verification process of ASCS based on RTEFSM is also proposed. Furthermore, combined with the verification of an aircraft inertial/satellite navigation systems, a timed unique input/output sequence (t_UIO) is presented and the automatic generation algorithm of subtransfer sequences based on t_UIO is given. Finally, the test adequacy criteria are discussed and a time condition coverage criterion is proposed. The actual engineering project application shows that the method proposed in this paper is of great value for the ASCS, which can be generally and effectively used in engineering. © 2010 ACADEMY PUBLISHER.},
+   author = {Yongfeng Yin and Bin Liu and Duo Su},
+   doi = {10.4304/jcp.5.8.1152-1159},
+   issn = {1796203X},
+   issue = {8},
+   journal = {Journal of Computers},
+   keywords = {Aircraft,Formal methods,RT-EFSM,Real-time embedded software,Safety critical software,Test sequence,Verification},
+   pages = {1152-1159},
+   title = {Research on formal verification technique for aircraft safety-critical software},
+   volume = {5},
+   year = {2010},
+}
+@article{Soares_Chirica_Pereira2024,
+   abstract = {We present our work on the collaborative use of dynamic and static analysis tools for the verification of software written in the OCaml language. We build upon Gospel, a specification language for OCaml that can be used both in dynamic and static analyses. We employ Ortac, for runtime assertion checking, and Cameleer and CFML for the deductive verification of OCaml code. We report on the use of such tools to build a case study of collaborative analysis of a non-trivial OCaml program. This shows how these tools nicely complement each others, while at the same highlights the differences when writing specification targeting dynamic or static analysis methods.},
+   author = {Tiago Lopes Soares and Ion Chirica and Mário Pereira},
+   month = {7},
+   title = {Static and Dynamic Verification of OCaml Programs: The Gospel Ecosystem (Extended Version)},
+   url = {http://arxiv.org/abs/2407.17289},
+   year = {2024},
+}
+@misc{Filliatre_Jean-Christophe,
+   abstract = {Runtime assertion checking (RAC) is a convenient set of techniques that lets developers abstract away the process of verifying the correctness of their programs by writing formal specifications and automating their verification at runtime. In this work, we present ortac, a runtime assertion checking tool for OCaml libraries and programs. OCaml is a functional programming language in which idioms rely on an expressive type system, modules, and interface abstractions. ortac consumes interfaces annotated with type invariants and function contracts and produces code wrappers with the same signature that check these specifications at runtime. It provides a flexible framework for traditional assertion checking, monitoring mis-behaviors without interruptions, and automated fuzz testing for OCaml programs. This paper presents an overview of ortac features and highlights its main design choices.},
+   author = {Jean-Christophe Filliâtre and Clément Pascutto},
+   keywords = {Assertion,Caml·,Checking· O,Engineer-ing,Runtime,Software},
+   title = {Ortac: Runtime Assertion Checking for OCaml (tool paper)},
+   url = {https://github.com/ocaml-gospel/ortac.},
+}
+@inproceedings{Brian_Polgreen2025,
    abstract = {Over the past few years there has been significant progress in the various fields of software verification resulting in many useful tools and successful deployments, both academic and commercial. However much of the work describing these tools and ideas is written by and for the research community. The scale, diversity and focus of the literature can act as a barrier, separating industrial users and the wider academic community from the tools that could make their work more efficient, more certain and more productive. This tutorial gives a simple classification of verification techniques in terms of a pyramid and uses it to describe the six main schools of verification technologies. We have found this approach valuable for building collaborations with industry as it allows us to explain the intrinsic strengths and weaknesses of techniques and pick the right tool for any given industrial application. The model also highlights some of the cultural differences and unspoken assumptions of different areas of verification and illuminates future directions.},
    author = {Martin Brain and Elizabeth Polgreen},
    doi = {10.1007/978-3-031-71177-0_24},
@@ -30,19 +65,4 @@
    title = {A Pyramid Of (Formal) Software Verification},
    volume = {14934 LNCS},
    year = {2025},
-}
-@InProceedings{Filliâtre2021,
-author="Filli{\^a}tre, Jean-Christophe
-and Pascutto, Cl{\'e}ment",
-editor="Feng, Lu
-and Fisman, Dana",
-title="Ortac: Runtime Assertion Checking for OCaml (Tool Paper)",
-booktitle="Runtime Verification",
-year="2021",
-publisher="Springer International Publishing",
-address="Cham",
-pages="244--253",
-abstract="Runtime assertion checking (RAC) is a convenient set of techniques that lets developers abstract away the process of verifying the correctness of their programs by writing formal specifications and automating their verification at runtime.",
-isbn="978-3-030-88494-9",
-doi = {10.1007/978-3-030-88494-9_13}
 }
