--- a/Config/3_cover.tex
+++ b/Config/3_cover.tex
@@ -23,8 +23,8 @@
 \nttitle(main,pt){Um Título de Tese Longo\\e com uma Mudança de Linha Forçada}%
 
 %         You may use "\\" to force line breaks
-\nttitle(sub,en){Some thoughts on the Life, the Universe,\\and Everything Else}%
-\nttitle(sub,pt){Algumas considerações sobre a Vida,\\o Universo e Tudo o Mais}%
+% \nttitle(sub,en){Some thoughts on the Life, the Universe,\\and Everything Else}%
+% \nttitle(sub,pt){Algumas considerações sobre a Vida,\\o Universo e Tudo o Mais}%
 
 %         You may NOT use "\\" to force line breaks
 % \nttitle(spine,en){A Very Long and Impressive Thesis Title}%
@@ -92,8 +92,8 @@
 % AUTHOR previous degree
 % SYNTAX: \ntauthordegree{degree}
 %-------------------------------------------------------------------
-\ntauthordegree(en){Master in Computer Science and Engineering}
-\ntauthordegree(pt){Mestrado em Engenharia Informática}
+\ntauthordegree(en){BSc in Computer Science}
+\ntauthordegree(pt){Licenciatura em Engenharia Informática}
 
 %-------------------------------------------------------------------
 % SUBMISSION/EXAM DATE
