Start of chapter 3

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -1,4 +1,18 @@
-@article{Rajabli_Nijat2021,
+@misc{Pereira2024,
+   abstract = {In this paper, we provide a comprehensive, hands-on tutorial on how to apply deductive verification to programs written in OCaml. In particular, we show how one can use the GOSPEL specification language and the Cameleer tool to conduct mostly-automated verification on OCaml code. In our presentation, we focus on two main classes of programs: first, purely functional programs with no mutable state; then on imperative programs, where one can mix mutable state with subtle control-flow primitives, such as locally-defined exceptions.},
+   author = {Mário Pereira},
+   doi = {10.54499/UIDB/04516/2020},
+   editor = {Andre Platzer and Matteo Rossi and Matteo Pradella and Kristin Yvonne Rozier},
+   isbn = {978-3-031-71177-0},
+   issue = {Formal Methods},
+   month = {9},
+   pages = {518-542},
+   publisher = {Springer Nature Switzerland},
+   title = {Practical Deductive Verification of OCaml Programs},
+   url = {https://sciproj.ptcris.pt/157572UID},
+   year = {2024},
+}
+@article{Rajabli2021,
    abstract = {Autonomous, or self-driving, cars are emerging as the solution to several problems primarily caused by humans on roads, such as accidents and traffic congestion. However, those benefits come with great challenges in the verification and validation (V&V) for safety assessment. In fact, due to the possibly unpredictable nature of Artificial Intelligence (AI), its use in autonomous cars creates concerns that need to be addressed using appropriate V&V processes that can address trustworthy AI and safe autonomy. In this study, the relevant research literature in recent years has been systematically reviewed and classified in order to investigate the state-of-the-art in the software V&V of autonomous cars. By appropriate criteria, a subset of primary studies has been selected for more in-depth analysis. The first part of the review addresses certification issues against reference standards, challenges in assessing machine learning, as well as general V&V methodologies. The second part investigates more specific approaches, including simulation environments and mutation testing, corner cases and adversarial examples, fault injection, software safety cages, techniques for cyber-physical systems, and formal methods. Relevant approaches and related tools have been discussed and compared in order to highlight open issues and opportunities.},
    author = {Nijat Rajabli and Francesco Flammini and Roberto Nardone and Valeria Vittorini},
    doi = {10.1109/ACCESS.2020.3048047},
@@ -10,6 +24,31 @@
    title = {Software Verification and Validation of Safe Autonomous Cars: A Systematic Literature Review},
    volume = {9},
    year = {2021},
+}
+@article{Soares2024,
+   abstract = {We present our work on the collaborative use of dynamic and static analysis tools for the verification of software written in the OCaml language. We build upon Gospel, a specification language for OCaml that can be used both in dynamic and static analyses. We employ Ortac, for runtime assertion checking, and Cameleer and CFML for the deductive verification of OCaml code. We report on the use of such tools to build a case study of collaborative analysis of a non-trivial OCaml program. This shows how these tools nicely complement each others, while at the same highlights the differences when writing specification targeting dynamic or static analysis methods.},
+   author = {Tiago Lopes Soares and Ion Chirica and Mário Pereira},
+   month = {7},
+   title = {Static and Dynamic Verification of OCaml Programs: The Gospel Ecosystem (Extended Version)},
+   url = {http://arxiv.org/abs/2407.17289},
+   year = {2024},
+}
+@misc{,
+   abstract = {This paper presents experiments realized by Airbus on model checking a safety critical system, lessons learnt and ways forward to extend the industrial use of formal verification at design level.},
+   author = {Thomas Bochot and Pierre Virelizier and Hélène Waeselynck and Virginie Wiels},
+   title = {Model Checking Flight Control Systems: the Airbus Experience},
+}
+@misc{,
+   abstract = {Runtime assertion checking (RAC) is a convenient set of techniques that lets developers abstract away the process of verifying the correctness of their programs by writing formal specifications and automating their verification at runtime. In this work, we present ortac, a runtime assertion checking tool for OCaml libraries and programs. OCaml is a functional programming language in which idioms rely on an expressive type system, modules, and interface abstractions. ortac consumes interfaces annotated with type invariants and function contracts and produces code wrappers with the same signature that check these specifications at runtime. It provides a flexible framework for traditional assertion checking, monitoring mis-behaviors without interruptions, and automated fuzz testing for OCaml programs. This paper presents an overview of ortac features and highlights its main design choices.},
+   author = {Jean-Christophe Filliâtre and Clément Pascutto},
+   keywords = {Assertion,Caml·,Checking· O,Engineer-ing,Runtime,Software},
+   title = {Ortac: Runtime Assertion Checking for OCaml (tool paper)},
+   url = {https://github.com/ocaml-gospel/ortac.},
+}
+@misc{,
+   author = {Ana Cavalcanti and Manfred Broy and Tu Munich and Germany Annabelle McIver and Peter Müller and Eth Zurich and Switzerland Erik de Vink and Pamela Zave and Gerhard Goos Juris Hartmanis and Elisa Bertino and Usa Wen Gao and China Bernhard Steffen and Germany Moti Yung},
+   title = {Subline Advisory Board Founding Editors Editorial Board Members},
+   url = {https://link.springer.com/bookseries/558},
 }
 @article{Bezerra_Jonas_Santos2016,
    abstract = {Health assessment tools (treatment standardization guidelines, risk evaluation scales, disease burden estimations, and patient's perceptions questionnaires, among others) are very similar in format to a software specification, although targeted to humans. As in any document written in natural language, such medical approaches are prone to errors and misunderstandings caused by ambiguities, omissions, or inconsistencies thus reducing the applicability and efficacy of these tools. The verification of health assessment tools is an important step for standardization but it is still a manual and ad-hoc process in the medical community. This work proposes the use of a formal approach for the verification of health assessment tools. We apply and evaluate a methodology originally proposed for the verification of Use Cases to a specific medical standardization guideline. Preliminary results show that formal verification of these medical artifacts can be a cost-effective mechanism to validate and qualify health approaches.},
