--- a/Config/5_packages.tex
+++ b/Config/5_packages.tex
@@ -35,6 +35,8 @@
 \newcommand{\zthree}{\gls{z3}\xspace}
 \newcommand{\altergo}{\gls{altergo}\xspace}
 \newcommand{\coq}{\gls{coq}\xspace}
+\newcommand{\monitor}{\texttt{Monitor}}
+\newcommand{\monitors}{\texttt{Monitors}}
 
 \usepackage{paralist}     % To enable costumizable enumerates.  See the documentation.
 
