Gantt Chart added

--- a/Config/5_packages.tex
+++ b/Config/5_packages.tex
@@ -24,6 +24,7 @@
 \usepackage{hyperref}
 \usepackage{xspace}
 \usepackage{listings}
+\usepackage{pgfgantt}
 
 \newcommand{\ocaml}{OCaml\xspace}
 \newcommand{\gospellang}{\gls{gospel}\xspace}
