State of the Art and Work Plan updated

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -1,3 +1,26 @@
+@misc{Pereira,
+   author = {Mário José and Parreira Pereira},
+   title = {Tools and Techniques for the Verification of Modular Stateful Code},
+   url = {https://theses.hal.science/tel-01980343v1},
+}
+@article{Maurica2018,
+   abstract = {Runtime assertion checking aspires to a similar level of sound and complete checking of software as does static deductive verification. Furthermore, for the same source language and specification language, runtime and static checking should implement as closely as possible the same semantics. We describe here the architecture used by two different systems to achieve this goal. We accompany that with descriptions of novel designs and implementations that add new capabilities to runtime assertion checking, bringing it closer to the feature coverage of static verification.},
+   author = {Fonenantsoa Maurica and David R Cok and Julien Signoles},
+   doi = {10.1007/978-3-030-03421-4_6ï},
+   journal = {Computer Science},
+   pages = {75-91},
+   title = {Runtime assertion checking and static verification: Collaborative partners},
+   url = {https://cea.hal.science/cea-04477117v1},
+   year = {2018},
+}
+@misc{Kosmatov2014,
+   abstract = {Why3 is an environment for static verification, generic in the sense that it is used as an intermediate tool by different front-ends for the verification of Java, C or Ada programs. Yet, the choices made when designing the specification languages provided by those front-ends differ significantly, in particular with respect to the executability of specifications. We review these differences and the issues that result from these choices. We emphasize the specific feature of ghost code which turns out to be extremely useful for both static and dynamic verification. We also present techniques, combining static and dynamic features, that help users understand why static verification fails.},
+   author = {Nikolai Kosmatov and Claude Marché and Yannick Moy and Julien Signoles},
+   pages = {461-478},
+   title = {Static versus Dynamic Verification in Why3, Frama-C and SPARK},
+   url = {http://frama-c.com},
+   year = {2014},
+}
 @inbook{Pereira_Ravara2021,
    abstract = {We present Cameleer, an automated deductive verification tool for OCaml. We leverage on the recently proposed GOSPEL (Generic OCaml SPEcification Language) to attach rigorous, yet readable, behavioral specification to OCaml code. The formally-specified program is fed to our toolchain, which translates it into an equivalent one in WhyML, the programming and specification language of the Why3 verification framework. We report on successful case studies conducted in Cameleer.},
    author = {Mário Pereira and António Ravara},
