Chapter 2 updated: why3 and introduction to chapter

--- a/gospel.sty
+++ b/gospel.sty
@@ -97,7 +97,7 @@ literate={'a}{$\alpha$}{1}%
  } {\addtocounter{lst}{1}}
 
 \lstnewenvironment{whylang}[1][none]{
-  \lstset{language=gospel,numbers=#1,caption={\whyml \vspace*{-2em}},aboveskip=-1em, basicstyle=\ttfamily\footnotesize}
+  \lstset{language=gospel,numbers=#1,caption={WhyML \vspace*{-2em}},aboveskip=-1em, basicstyle=\ttfamily\footnotesize}
  } {\addtocounter{lst}{1}}
 
 \lstnewenvironment{gospelsmall}[1][none]{
@@ -109,7 +109,7 @@ literate={'a}{$\alpha$}{1}%
  } {\addtocounter{lst}{1}}
 
  \lstnewenvironment{whylangannex}[1][none]{
-  \lstset{language=gospel, xleftmargin=-5em,numbers=#1,caption={\whyml \vspace*{-2em}},aboveskip=-1em, basicstyle=\ttfamily\footnotesize}
+  \lstset{language=gospel, xleftmargin=-5em,numbers=#1,caption={WhyML \vspace*{-2em}},aboveskip=-1em, basicstyle=\ttfamily\footnotesize}
  } {\addtocounter{lst}{1}}
 
 
